[package]
name = "mc-server-notif"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
craftping = "0.3.0"
env_logger = "0.9.0"
fncmd = "1.2.5"
image = "0.24.2"
notify-rust = "4.5.8"
tao = { version = "0.12.1", features = ["tray"] }
